--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -30,3 +30,23 @@ jobs:
           pipenv install -r requirements.txt
           pipenv run pytest -v                          
         # Running pytest
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}   # fetch from dockerhub
+          password: ${{ secrets.DOCKERHUB_TOKEN }}      # fetch from dockerhub
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./fastapi    # path to dockerfile
+          # file: Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/labs_fastpi:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/labs_fastpi:${{ steps.commit.outputs.short }}
+          # Change the container image "demo_fastapi_private"
