--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,7 @@ great-expectation/great_expectations/uncommitted/validations
 
 !pytest/test_run_2023-02-01_17:59:40.log
 DAMG7245-Spring23.code-workspace
-
+*key.json
 # Local .terraform directories
 **/.terraform/*
 
